--- a/myarxiv-document/src/main/resources/bootstrap.yml
+++ b/myarxiv-document/src/main/resources/bootstrap.yml
@@ -4,16 +4,23 @@ spring:
   application:
     name: myarxiv-document
   cloud:
+    ribbon:
+      # 请求处理的超时时间
+      ReadTimeout: 60000
+      # 请求连接的超时时间
+      ConnectTimeout: 60000
     nacos:
       username: ${NACOS_USERNAME:nacos}
       password: ${NACOS_PASSWORD:nacos}
       discovery:
-        server-addr: ${NACOS_ADDR:192.168.153.145:8850}
+#        server-addr: ${NACOS_ADDR:192.168.153.145:8850}
+        server-addr: ${NACOS_ADDR:43.139.8.186:8850}
         namespace: ${NAMESPACE_ID:0a523cd0-799b-4032-95d7-ac5baaca0185}
       config:
         enabled: true
         bootstrap: true
-        server-addr: ${NACOS_ADDR:192.168.153.145:8850}
+#        server-addr: ${NACOS_ADDR:192.168.153.145:8850}
+        server-addr: ${NACOS_ADDR:43.139.8.186:8850}
         namespace: ${NAMESPACE_ID:0a523cd0-799b-4032-95d7-ac5baaca0185}
         group: ${NACOS_GROUP:DOCUMENT_GROUP}
         file-extension: ${NACOS_EX:yaml}
